--- a/recipes/hamburger.html
+++ b/recipes/hamburger.html
@@ -9,7 +9,7 @@
     <body>
         <h1>Hamburger</h1>
         <div></div>
-        <img src="/home/emilianos/repos/Odin_Recipes/pictures/hamburger.jpg">   
+        <img src="/home/emilianos/repos/Odin_Recipes/pictures/hamburger.jpg" width="50%" height="50%">   
         <h3>Description</h3>
         <p>A hamburger is a classic American dish that consists of a ground beef patty, typically grilled or fried, and served on a bun with a variety of toppings. Common toppings include lettuce, tomato, onion, pickles, cheese, bacon, ketchup, mustard, and mayonnaise. The hamburger patty is usually seasoned with salt and pepper and can be cooked to different levels of doneness, such as rare, medium, or well-done. Hamburger dishes can be customized to fit a variety of tastes and preferences, and are often served alongside french fries or other sides.</p>
 
