--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -9,7 +9,7 @@
     <body>
         <h1>Lasagna</h1>
         <div></div>
-        <img src="/home/emilianos/repos/Odin_Recipes/pictures/Lasagna-Recipe-f.webp">   
+        <img src="/home/emilianos/repos/Odin_Recipes/pictures/Lasagna-Recipe-f.webp" width="50%" height="50%">   
         <h3>Description</h3>
         <p>Lasagna is a classic Italian dish that consists of layers of wide flat pasta noodles, alternating with a rich tomato-based sauce, seasoned ground meat such as beef, pork, or sausage, creamy ricotta cheese, and mozzarella cheese. Additional ingredients such as vegetables like spinach, zucchini, or eggplant, and herbs like basil or oregano can also be added to the layers. The layers are typically baked in the oven until the top is golden brown and the cheese is melted and bubbly. The result is a hearty, comforting and flavorful meal that is perfect for family gatherings or special occasions.</p>
 
