--- a/recipes/sandwich.html
+++ b/recipes/sandwich.html
@@ -9,7 +9,7 @@
     <body>
         <h1>Sandwich</h1>
         <div></div>
-        <img src="/home/emilianos/repos/Odin_Recipes/pictures/sandwich.webp">   
+        <img src="/home/emilianos/repos/Odin_Recipes/pictures/sandwich.webp" width="50%" height="50%">   
         <h3>Description</h3>
         <p>A sandwich is a type of dish that typically consists of one or more fillings between two slices of bread. The fillings can be a wide variety of ingredients, including meats, cheeses, vegetables, spreads, and sauces. Sandwiches can be served cold or hot, and are often customized to personal taste preferences. Some popular sandwich varieties include classic ham and cheese, turkey and avocado, roast beef with horseradish sauce, or a vegetarian option like grilled vegetables with hummus. Sandwiches are a quick and easy meal that can be enjoyed for lunch or dinner, or as a snack on the go.</p>
 
