--- a/recipes/steak.html
+++ b/recipes/steak.html
@@ -9,7 +9,7 @@
     <body>
         <h1>Steak</h1>
         <div></div>
-        <img src="/home/emilianos/repos/Odin_Recipes/pictures/steak.jpg">   
+        <img src="/home/emilianos/repos/Odin_Recipes/pictures/steak.jpg" width="50%" height="50%">   
         <h3>Description</h3>
         <p>A steak is a cut of beef that is typically served grilled or pan-seared, and is often considered a luxury dish due to its high quality and rich flavor. The most popular steak cuts include ribeye, sirloin, filet mignon, and T-bone. Steaks can be prepared in a variety of ways, ranging from rare to well-done, and can be seasoned with a variety of herbs and spices to enhance the natural flavor of the meat. A steak dish is often served alongside a variety of sides, such as roasted vegetables, mashed potatoes, or a salad. A well-prepared steak is a satisfying and hearty meal that can be enjoyed on special occasions or as a special treat.</p>
 
@@ -31,7 +31,7 @@
             <li>Check the internal temperature of the steak using a meat thermometer. For medium-rare, the temperature should be 135°F (57°C); for medium, the temperature should be 145°F (63°C); for well-done, the temperature should be 160°F (71°C).</li>
             <li>Remove the steak from the grill or skillet and let it rest for 5-10 minutes to allow the juices to redistribute.</li>
             <li>Slice the steak against the grain into thin strips, and serve immediately with your choice of sides. Enjoy!</li>
-            
+
         </ol>
 
         <br>
