--- a/index.html
+++ b/index.html
@@ -2,13 +2,15 @@
 
 <html lang="en">
     <head>
+        <link rel="stylesheet" type="text/css" href="index.html">
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">        
         <title>Recipes Practice</title>
+        
     </head>
     <body>
 
-        <h1>Odin Recipes</h1>  
+        <h1 id="homepage">Odin Recipes</h1>  
 
         <ul>
 
