--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 
 <html lang="en">
     <head>
-        <link rel="stylesheet" type="text/css" href="index.html">
+        <link rel="stylesheet" type="text/css" href="index.css">
+        
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">        
         <title>Recipes Practice</title>
