--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html lang="en">
     <head>
-        <link rel="stylesheet" type="text/css" href="index.css">
+        <link href="index.css" rel="stylesheet" type="text/css" >
         
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">        
@@ -10,16 +10,19 @@
         
     </head>
     <body>
-
-        <h1 id="homepage">Odin Recipes</h1>  
+        <div id="title">
+            <h1>Odin Recipes</h1>  
+        </div>
 
         <ul>
 
         <h3>
-        <li><a href="/home/emilianos/repos/Odin_Recipes/recipes/lasagna.html">How to cook Lasagna</a></li>
-        <li><a href="/home/emilianos/repos/Odin_Recipes/recipes/hamburger.html">How to cook a Hamburger</a></li>
-        <li><a href="/home/emilianos/repos/Odin_Recipes/recipes/sandwich.html">How to make a Sandwich</a></li>
-        <li><a href="/home/emilianos/repos/Odin_Recipes/recipes/steak.html">How to cook Steak</a></li>
+            <div class="recipes">
+                <div class="food"> <li> <a href="/home/emilianos/repos/Odin_Recipes/recipes/lasagna.html">How to cook Lasagna</a></li></div>
+                <div class="food"> <li> <a href="/home/emilianos/repos/Odin_Recipes/recipes/hamburger.html">How to cook a Hamburger</a></li></div>
+                <div class="food"> <li> <a href="/home/emilianos/repos/Odin_Recipes/recipes/sandwich.html">How to make a Sandwich</a></li></div>
+                <div class="food"> <li> <a href="/home/emilianos/repos/Odin_Recipes/recipes/steak.html">How to cook Steak</a></li></div>        
+            </div>
         </h3>
 
         </ul>
