Addded CSS properties to all recipes. Implemented simple design for all.

--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
             <h1>Odin Recipes</h1>  
         </div>
 
-        <ul>
-
         <h3>
             <div class="recipes">
-                <div class="food"> <li> <a href="/home/emilianos/repos/Odin_Recipes/recipes/lasagna.html">How to cook Lasagna</a></li></div>
-                <div class="food"> <li> <a href="/home/emilianos/repos/Odin_Recipes/recipes/hamburger.html">How to cook a Hamburger</a></li></div>
-                <div class="food"> <li> <a href="/home/emilianos/repos/Odin_Recipes/recipes/sandwich.html">How to make a Sandwich</a></li></div>
-                <div class="food"> <li> <a href="/home/emilianos/repos/Odin_Recipes/recipes/steak.html">How to cook Steak</a></li></div>        
+                <div class="food"> <a href="/home/emilianos/repos/Odin_Recipes/recipes/lasagna.html">How to cook Lasagna</a></div>
+
+                <div class="food"> <a href="/home/emilianos/repos/Odin_Recipes/recipes/hamburger.html">How to cook a Hamburger </a> </div>
+
+                <div class="food"> <a href="/home/emilianos/repos/Odin_Recipes/recipes/sandwich.html">How to make a Sandwich </a> </div>
+
+                <div class="food"> <a href="/home/emilianos/repos/Odin_Recipes/recipes/steak.html">How to cook Steak</a> </div>        
             </div>
         </h3>
 
-        </ul>
     </body>
 </html>
