--- a/recipes/hamburger.html
+++ b/recipes/hamburger.html
@@ -2,9 +2,12 @@
 
 <html lang="en">
     <head>
+        <link rel="stylesheet" href="hamburger.css">
+
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">        
         <title>Recipes Practice</title>
+
     </head>
     <body>
         <h1>Hamburger</h1>
